<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:text="@string/Driver_Score"
        android:padding="30dp"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimaryDark"
        />


    <TextView
        android:id = "@+id/Rapid_Accels"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Rapid_Accels"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id ="@+id/Hard_Breaking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Hard_Breaking"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"/>

    <TextView
        android:id = "@+id/Speeding"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Speeding"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id ="@+id/Idle_Time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Idle_Time"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/colorPrimary"/>
        </LinearLayout>
